# lingxuan

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
docs/: architecture-v2-planning-prompt.md  architecture-v2.md  architecture-v3.md  napcat.md  onebot11.lingxuan.example.json  webui.lingxuan.example.json
docs/prompts/: 00-common-context.md  README.md
docs/prompts-v3/: README.md
src/lingxuan/: __init__.py  _config.py  admin.py  bootstrap.py  bot.py  cli.py  config.py  container.py  group_entities.py  group_observer.py  llm.py  memory.py  message_chunk.py  persona.py  settings_defaults.py  startup.py  user_memory.py
tests/: conftest.py  test_cli.py  test_container.py  test_container_sqlite.py  test_imports.py  test_no_legacy_config_imports.py  test_settings_defaults.py
tests/adapters/: test_clock.py  test_config_provider.py  test_onebot_lifecycle.py  test_onebot_mapping.py  test_onebot_transport.py  test_openai_provider.py
tests/admin/: test_api_config.py  test_api_data.py  test_api_plugins_audit.py  test_api_status.py  test_app.py  test_auth.py  test_ws.py
tests/core/: test_admin_commands.py  test_dialogue_service.py  test_hook_integration.py  test_memory_service.py  test_models.py  test_observation_service.py  test_observation_state.py  test_persona.py  test_prompting.py  test_reply_planner.py  test_user_memory_service.py
tests/fakes/: __init__.py  clock.py  config.py  llm.py  logsink.py  repositories.py  test_fakes.py  (+1 more)
(+170 files in other folders)
