[project]
name = "lingxuan"
version = "0.1.0"
description = "灵轩 - 基于 NapCatQQ 的 AI QQ 机器人"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy"]

[project.scripts]
lingxuan = "lingxuan.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lingxuan"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
